--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -599,6 +599,13 @@
             (list (format "%s %%S: %%j " (system-name))
                   '(buffer-file-name "%f" (dired-directory dired-directory "%b"))))
     #+END_SRC
+**** limit buffer name size in modeline
+     Sometimes I have very long file names (think textbook pdfs) and it makes
+     seeing anything else on my mode line impossible. So let's reduce what can
+     be shown:
+     #+BEGIN_SRC emacs-lisp
+       (setq-default mode-line-buffer-identification (list -40 (propertized-buffer-identification "%12b")))
+     #+END_SRC
 **** which-key and general.el
      Which-key is a very nice minor-mode that essentially gives a preview of
      all possible key completions available based on the current key stroke,
@@ -625,12 +632,12 @@
          ;; ensures popup cannot take up more than .15 of emacs window
          (setq which-key-side-window-max-height .10))
      #+END_SRC
-**** fill-column, spaces, and tabs
+**** fill-column, spaces, tabs, and unfilling paragraphs
      #+BEGIN_SRC emacs-lisp
        (setq-default fill-column 79)
        (setq-default indent-tabs-mode nil)
        (setq-default default-tab-width 2)
-
+       (use-package unfill)
      #+END_SRC
 **** theme, styling, and transparency
      #+BEGIN_SRC emacs-lisp
@@ -868,7 +875,7 @@
 
        (advice-add 'kill-ring-save :before #'slick-copy)
      #+END_SRC
-**** PDF
+**** PDFs, Documents
      - basic settings for how i want my pdf's handled. I use pdf-view
        (pdf-tools), which gives way better resolution, performance, and also
        even annotation logic!
@@ -893,7 +900,37 @@
       #+BEGIN_SRC emacs-lisp
         (define-key pdf-view-mode-map (kbd "C-s") 'isearch-forward)
       #+END_SRC
-      
+***** Doc-View resolution
+      For documents that cannot use pdftools, e.g. djvu or ppt files, the
+      resolution can be really crappy sometimes. This makes it better:
+
+      #+BEGIN_SRC emacs-lisp
+        (setq doc-view-resolution 200)
+      #+END_SRC
+**** compilation buffer
+     By default, the compilation buffer created when running a command via =M-x
+     compile= doesn't account for xterm colors and other escape code related
+     things. =xterm-color= handles this effectively via the following:
+
+     #+BEGIN_SRC emacs-lisp
+       (use-package xterm-color)
+
+       (setq compilation-environment '("TERM=xterm-256color"))
+
+       (add-hook 'compilation-start-hook
+                 (lambda (proc)
+                   ;; We need to differentiate between compilation-mode buffers
+                   ;; and running as part of comint (which at this point we assume
+                   ;; has been configured separately for xterm-color)
+                   (when (eq (process-filter proc) 'compilation-filter)
+                     ;; This is a process associated with a compilation-mode buffer.
+                     ;; We may call `xterm-color-filter' before its own filter function.
+                     (set-process-filter
+                      proc
+                      (lambda (proc string)
+                        (funcall 'compilation-filter proc
+                                 (xterm-color-filter string)))))))
+     #+END_SRC
 *** completion
 
     #+BEGIN_SRC emacs-lisp
